--- a/partial-views/subject.html
+++ b/partial-views/subject.html
@@ -1,5 +1,5 @@
 <div>
     <div>Список тем!</div>
-    <treecontrol class="tree-classic" tree-model="$ctrl.treedata" node-children="children" on-selection="showSelected(node)" selected-node="node1">
+    <treecontrol class="tree-classic" tree-model="$ctrl.treedata" node-children="children" on-selection="$ctrl.showSelected(node)" selected-node="node1">
 
 </div>
