--- a/partial-views/main.html
+++ b/partial-views/main.html
@@ -1,2 +1,10 @@
-<h1>За и против! </h1>
-<subjects></subjects>
+<div class="container">
+  <div class="row">
+      <div class="md-12">
+           <h1>За и против! </h1>
+      </div>
+      <div class="md-12">
+          <subjects></subjects>
+      </div>
+  </div>
+</div>
