--- a/partial-views/subject.html
+++ b/partial-views/subject.html
@@ -1,5 +1,3 @@
 <div>
-    <div>Список тем!</div>
-    <treecontrol class="tree-classic" tree-model="$ctrl.treedata" node-children="children" on-selection="$ctrl.showSelected(node)" selected-node="node1">
-
+    Subject! {{$ctrl.subs.sectedNode}}
 </div>
