--- a/partial-views/treeControlTemplate.html
+++ b/partial-views/treeControlTemplate.html
@@ -1,7 +1,7 @@
 <script type="text/ng-template" id="categoryTree.html">
-     <div ng-class="$ctrl.headClass(item)" ng-click="$ctrl.selectNodeHead(item)">{{item.roleName}}</div>
+    <div ng-class="$ctrl.headClass(item)" ng-click="$ctrl.selectNodeHead(item)">{{item.roleName}}</div>
     <ul ng-if="item.children.length > 0 && $ctrl.headClass(item) != 'tree-collapsed'" >
-      <li ng-repeat="item in item.children" ng-include="'categoryTree.html'"  ng-click="$ctrl.selectNodeLabel(item)" >        
+      <li ng-repeat="item in item.children" ng-include="'categoryTree.html'"  ng-click="$ctrl.selectNodeLabel(item, $event)" >        
       </li>
     </ul>
 </script>
