--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <title>За и против</title>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>   
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>      
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script> 
+        <link rel="stylesheet" type="text/css" href="css/main.css"></link>     
         <link rel="stylesheet" type="text/css" href="css/tree.css"></link>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css"></link>
         <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css"></link>
