--- a/partial-views/subject.html
+++ b/partial-views/subject.html
@@ -11,5 +11,13 @@
             <div class="title">Cons</div>
            <arguments args="$ctrl.subj.arguments.cons">
         </div>
+        <div class="col-md-12 add" >
+            <button ng-click="$ctrl.positive()" class="btn plusarg">+</button>
+            <input type="text" value="I like you lads - great resourse" ng-model="$ctrl.requestData" />
+            <button ng-click="$ctrl.negative()" class="btn minusarg">-</button>
+        </div>
+        <div class="col-md-12 add-btn-container">
+            <button class="btn add-btn" ng-click="$ctrl.addArg()">Add</button>
+        </div>
     </div>
 </div>
