--- a/index.html
+++ b/index.html
@@ -1,18 +1,43 @@
 <html ng-app="zaiprotiv">
-    <head>
-        <title>За и против</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>   
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script> 
-        <link rel="stylesheet" type="text/css" href="css/main.css"></link>     
-        <link rel="stylesheet" type="text/css" href="css/tree.css"></link>
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.css"></link>
-        <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css"></link>
-    </head>
-    <body >
-        <div ng-view>
-            <main>
-            </main>
-        </div>   
-        <script src="assets/bundle.js"></script>        
-    </body>   
+<head>
+    <title>За и против</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
+
+
+    <link rel="stylesheet" type="text/css" href="css/main.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/tree.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css"></link>
+
+
+    <!-- Angular Material requires Angular.js Libraries -->
+
+
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+
+
+    <!-- Material Design fonts -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- Bootstrap Material Design -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/4.0.2/bootstrap-material-design.min.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.9/css/ripples.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/checkbox.css">
+
+</head>
+<body>
+<div ng-view>
+    <main>
+    </main>
+</div>
+<script src="assets/bundle.js"></script>
+</body>
 </html>
