add some button styles

--- a/partial-views/subject.html
+++ b/partial-views/subject.html
@@ -16,7 +16,7 @@
            <arguments args="$ctrl.subj.arguments.cons">
         </div>
         <div class="col-md-12 add" >
-            <button ng-click="$ctrl.positive()" class="btn plusarg">+</button>
+            <button ng-click="$ctrl.positive()" class="plusarg"></button>
             <input type="text" value="I like you lads - great resourse" ng-model="$ctrl.requestData" />
             <button ng-click="$ctrl.negative()" class="btn minusarg">-</button>
         </div>
