--- a/partial-views/main.html
+++ b/partial-views/main.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-      <div class="md-12">
+      <div class="col-md-12">
            <h1>За и против! </h1>
       </div>
-      <div class="md-12">
+      <div class="col-md-12">
           <subjects></subjects>
       </div>
   </div>
