--- a/partial-views/login.html
+++ b/partial-views/login.html
@@ -33,8 +33,8 @@
                         <i ng-click="$ctrl.showPassword()" class="fa errspan"></i>
                         <i ng-if="loginForm.password.$invalid && loginForm.password.$dirty"
                            class="fa errspan indicator"></i>
-                         <div ng-show="$ctrl.showPassword && loginForm.password.$invalid"
-                            class="popover right notice">
+                        <div ng-show="$ctrl.showPassword && loginForm.password.$invalid && loginForm.password.$dirty"
+                             class="popover right notice">
                             <div class="arrow"></div>
                             <h3 class="popover-title">Popover right</h3>
                             <div class="popover-content">
@@ -63,8 +63,6 @@
 
                 </div>
 
-
-               
 
             </div>
 
