--- a/partial-views/argument.html
+++ b/partial-views/argument.html
@@ -1,1 +1,1 @@
-<div><span class="plus" />{{$ctrl.data}}<span class="minus"></div>
+<div class="argument"><span class="plus" />{{$ctrl.data}}<span class="minus"></div>
