--- a/partial-views/login.html
+++ b/partial-views/login.html
@@ -30,7 +30,7 @@
                                class="form-control password-position eye-icon"
                                id="password"
                                placeholder="Password">
-                        <i ng-click="$ctrl.showPassword()" class="fa errspan"></i>
+                        <i ng-click="$ctrl.showPasswordValue()" class="fa errspan"></i>
                         <i ng-if="loginForm.password.$invalid && loginForm.password.$dirty"
                            class="fa errspan indicator"></i>
                         <div ng-show="$ctrl.showPassword && loginForm.password.$invalid && loginForm.password.$dirty"
