--- a/partial-views/login.html
+++ b/partial-views/login.html
@@ -73,6 +73,29 @@
             <div class="login-information-container">
                 <div class="login-information-container-item">
                     <h2>Do you already have an account?</h2>
+
+                    <div>
+                        <p>
+                            That's awesome! You can login by clicking on the button bellow. To skip this next time, you
+                            can ask us to remember your login credentials.
+                        </p>
+
+                        <div class="social-icons">
+                            <button type="submit"
+                                    class="btn btn-raised  btn-primary">
+                                Login in
+                            </button>
+
+                            <span class="txt">or use</span>
+                            <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                            <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                            <i class="fa fa-google-plus-square" aria-hidden="true"></i>
+                        </div>
+
+
+                    </div>
+
+
                 </div>
             </div>
         </div>
