Some changes for input

--- a/partial-views/main.html
+++ b/partial-views/main.html
@@ -1,9 +1,6 @@
-<div class="container">
-  <div class="row">
-      <div class="col-md-12">
-           <h1>За и против! </h1>
-      </div>
-      <div class="col-md-12">
+<div>
+  <div>
+       <div>
           <subjects></subjects>
       </div>
   </div>
