--- a/partial-views/subject.html
+++ b/partial-views/subject.html
@@ -1,61 +1,51 @@
 <div class="container-fluid widget-container">
 
 
-    <div>
-        <div class="container-flex widget row">
-
-
-            <div class="item-flex positive">
-                <div class="title">Pro</div>
-            </div>
-            <div class="item-flex negative">
-                <div class="title">Cons</div>
-            </div>
-        </div>
-
-
-        <div class="container-flex row">
-            <div class="item-flex">
-                <arguments args="$ctrl.subj.arguments.pro"></arguments>
-            </div>
-            <div class="item-flex">
-                <div class="title">
-                    <arguments args="$ctrl.subj.arguments.cons"></arguments>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="container-flex widget">
+                <div class="item-flex positive">
+                    <div class="title">Pro</div>
                 </div>
-            </div>
-        </div>
-
-    </div>
-
-    <div>
-        <div class="container-flex row">
-            <div class="item-flex widget-buttons">
-                <div class="widget-wrapper" ng-click="$ctrl.addArg()">
-                    <span class="widget-buttons-title">Add argument</span>
-                </div>
-
-            </div>
-            <div class="item-flex widget-buttons">
-                <div class="widget-wrapper" ng-click="$ctrl.showResult()">
-                    <span class="widget-buttons-title">Result</span>
+                <div class="item-flex negative">
+                    <div class="title">Cons</div>
                 </div>
             </div>
         </div>
     </div>
 
 
-    <!--<div class="row">-->
-    <!--<div class="col-md-12 subject-title">-->
-    <!--{{$ctrl.subj.subject }} <img ng-src="{{ $ctrl.subj.image_url }}"/>-->
-    <!--</div>-->
+    <div class="row">
+        <div class="col-md-12">
+            <div class="container-flex">
+                <div class="item-flex">
+                    <arguments args="$ctrl.subj.arguments.pro"></arguments>
+                </div>
+                <div class="item-flex">
+                    <div class="title">
+                        <arguments args="$ctrl.subj.arguments.cons"></arguments>
+                    </div>
+                </div>
+            </div>
 
-    <!--<div class="col-md-12 add">-->
-    <!--<button ng-click="$ctrl.positive()" class="plusarg"></button>-->
-    <!--<input type="text" value="I like you lads - great resourse" ng-model="$ctrl.requestData"/>-->
-    <!--<button ng-click="$ctrl.negative()" class="btn minusarg">-</button>-->
-    <!--</div>-->
-    <!--<div class="col-md-12 add-btn-container">-->
-    <!--<button class="btn add-btn" ng-click="$ctrl.addArg()">Add</button>-->
-    <!--</div>-->
-    <!--</div>-->
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="container-flex">
+                <div class="item-flex widget-buttons">
+                    <div class="widget-wrapper" ng-click="$ctrl.addArg()">
+                        <span class="widget-buttons-title">Add argument</span>
+                    </div>
+
+                </div>
+                <div class="item-flex widget-buttons">
+                    <div class="widget-wrapper" ng-click="$ctrl.showResult()">
+                        <span class="widget-buttons-title">Result</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
