Add delete method(not working)

--- a/partial-views/argument.html
+++ b/partial-views/argument.html
@@ -10,6 +10,10 @@
             <div class="argument-body">
                 {{$ctrl.data.body}}
             </div>
+
+            <div class="notimportant">
+                <button class="btn btn-ntimp" ng-click="$ctrl.removeArg($ctrl.data.id)">Not important</button>
+            </div>
         </div>
     </div>
 </div>
