--- a/partial-views/arguments.html
+++ b/partial-views/arguments.html
@@ -1,4 +1,5 @@
-<div class="md-6" ng-repeat="arg in $ctrl.args">
+<div class="md-6"  ng-repeat="arg in $ctrl.args">
+
     <argument data="arg"></argument>
-</div>
+<div>
 
