--- a/partial-views/subject.html
+++ b/partial-views/subject.html
@@ -3,9 +3,11 @@
 
     <div class="container-flex widget">
         <div class="item-flex positive">
+            <i class="fa fa-thumbs-up like-icon" aria-hidden="true"></i>
             <div class="title">Pro</div>
         </div>
         <div class="item-flex negative">
+            <i class="fa fa-thumbs-down like-icon" aria-hidden="true"></i>
             <div class="title">Cons</div>
         </div>
     </div>
