--- a/partial-views/arguments.html
+++ b/partial-views/arguments.html
@@ -1,5 +1,4 @@
-<div class="md-6"  ng-repeat="arg in $ctrl.args">
-
-    <argument data="arg"></argument>
-<div>
+<div class="md-6" ng-repeat="arg in $ctrl.args">
+    <argument call-back="$ctrl.removeArg" data="arg"></argument>
+</div>
 
