--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
 
 
-    <link rel="stylesheet" type="text/css" href="css/main.css"></link>
-    <link rel="stylesheet" type="text/css" href="css/tree.css"></link>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css"></link>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css"></link>
-
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/tree.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
+    <link rel="stylesheet" href="css/checkbox.css">
+    <link rel="stylesheet" href="css/toogle.css">
 
     <!-- Angular Material requires Angular.js Libraries -->
 
@@ -30,7 +31,7 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.9/css/ripples.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/checkbox.css">
+
 
 </head>
 <body>
