--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html ng-app="zaiprotiv">
 <head>
-    <title>За и против</title>
+    <title>ZA I PROTIV</title>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
 
