--- a/partial-views/arguments.html
+++ b/partial-views/arguments.html
@@ -1,4 +1,8 @@
+<div class="md-6">
+    <argument
+            hide-buttons="$ctrl.hideButtons"
+            ng-repeat="arg in $ctrl.args | filter: { isImportant : 'true' }"
+            args="arg">
+    </argument>
+</div>
 
-<div class="md-6"  >
-    <argument ng-repeat="arg in $ctrl.args | filter: { isImportant : 'true' }" args="arg" ></argument>
-<div>
