--- a/partial-views/results.html
+++ b/partial-views/results.html
@@ -15,11 +15,11 @@
 
     <div class="container-flex padding-bottom-20">
         <div class="item-flex auto-height">
-            <arguments args="$ctrl.subj.arguments.pro"></arguments>
+            <arguments hide-buttons="true" args="$ctrl.subj.arguments.pro"></arguments>
         </div>
         <div class="item-flex auto-height">
             <div class="title">
-                <arguments args="$ctrl.subj.arguments.cons"></arguments>
+                <arguments hide-buttons="true" args="$ctrl.subj.arguments.cons"></arguments>
             </div>
         </div>
     </div>
