--- a/partial-views/subject.html
+++ b/partial-views/subject.html
@@ -1,5 +1,12 @@
 <div class="container-fluid widget-container" ng-form="addArgumantForm" novalidate>
 
+    <div class="row">
+
+        <div class="item-flex" style="text-align: center">
+            <h2>{{$ctrl.subj.name}}: {{$ctrl.subj.description}}</h2>
+        </div>
+    </div>
+
 
     <div class="container-flex widget">
         <div class="item-flex positive">
