--- a/partial-views/results.html
+++ b/partial-views/results.html
@@ -1,5 +1,11 @@
 <div class="container-fluid widget-container">
 
+    <div class="row">
+        <div class="item-flex" style="text-align: center">
+            <h2>{{$ctrl.subj.name}}: {{$ctrl.subj.description}}</h2>
+        </div>
+    </div>
+
 
     <div class="container-flex widget">
         <div class="item-flex positive">
@@ -28,7 +34,7 @@
     <div class="row">
 
         <div class="item-flex" style="text-align: center">
-            <h2>Choise</h2>
+            <h2>Choice</h2>
         </div>
     </div>
 
