--- a/partial-views/main.html
+++ b/partial-views/main.html
@@ -1,5 +1,6 @@
 <div>
   <div>
+      <li ng-show="user.id"><a ng-click='signOut()'>Sign out</a></li>
        <div>
           <subjects></subjects>
       </div>
