--- a/partial-views/argument.html
+++ b/partial-views/argument.html
@@ -14,9 +14,12 @@
             </div>
 
             <div ng-hide="$ctrl.hideButtons" class="notimportant">
-                <button class="btn btn-default btn-block btn-raised btn-need" ng-click="$ctrl.remove($ctrl.args)">
+                <button class="btn btn-default btn-block btn-raised btn-need" ng-click="$ctrl.remove()" >
                     Not
                     important
+                </button>
+                  <button class="btn btn-default btn-block btn-raised btn-need" ng-click="$ctrl.removearg()">
+                  Remove
                 </button>
             </div>
         </div>
