add create and login logic

--- a/partial-views/login.html
+++ b/partial-views/login.html
@@ -55,8 +55,8 @@
                     </div>
 
 
-                    <button type="submit" ng-disabled="$ctrl.$ctrl.loginForm.$invalid && $ctrl.$ctrl.loginForm.$dirty"
-                            ng-click="$ctrl.login()"
+                    <button type="submit" ng-disabled="$ctrl.loginForm.$invalid && $ctrl.loginForm.$dirty"
+                            ng-click="$ctrl.create()"
                             class="btn btn-raised btn-info pull-right">
                         Sign up
                     </button>
