add sign up and login in app.Also notificatioans have been added

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
     <link rel="stylesheet" href="css/toogle.css">
 
     <!-- Angular Material requires Angular.js Libraries -->
-
-
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
-
-
+    <link rel="stylesheet" href="css/angular-ui-notification.css">
+    
     <!-- Material Design fonts -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
