Add sample saving on client

--- a/partial-views/main.html
+++ b/partial-views/main.html
@@ -1,6 +1,6 @@
 <div>
-  <div>
-      <li ng-show="user.id"><a ng-click='signOut()'>Sign out</a></li>
+  <div> 
+       <li ng-show="user.id"><button ng-click='signOut()'>Sign out</button></li>
        <div>
           <subjects></subjects>
       </div>
